[9.February 2009]
- sprinter.rb: full implementation of magical helmet
  (can bash Walls and Monsters; clever state changes - falling etc;
  Eric knocked out when he hits wall, Wall or Monster)
- viking.rb: added method knockout
- entities/wall.rb: destroyed Wall deletes itself from the Location properly

[8.February 2009]
- vikingstate.rb, sophisticatedspritestate.rb, viking.rb, shielder.rb,
  sword.rb, warior.rb:
  direction moved back to VikingState, but not to HorizontalState
- horizontalstate.rb: removed remains of direction from here
- ability.rb, sprinter.rb, gfx/models/erik_model.xml, shielder.rb:
  SprinterAbility removed (functionality moved to class Sprinter);
  ShielderAbility removed ( -"-                         Shielder);
  WariorAbility           (                             Warior)
- horizontalstate.rb, stateproprieties.rb: (Not)MovingStateProprieties
  renamed to (Not)MovingState
- vikingstate.rb: removed (after moving Abilities to horizontal state
  VikingState is the same as SophisticatedSpriteState)
- sophisticatedspritestate.rb: added method 'to_s'
- model files and images of vikings: all mirrored images facing right removed
  (generated programmatically)
- sprinter.rb, Erik's model file: added missing feature, Erik's magical
  helmet which can destroy Walls (actually the implementation isn't complete
  yet, but Erik already can destroy walls)

[7.February 2009]
- viking.rb: Viking#heal made more general
- entities/apple.rb: updated because of change in Viking#heal
- gfx/healingpotion.png: new image by Magnus
- entities/healingpotion.rb: 'superhealing' item
- level ManyItems (IMYI): added HealingPotions
- entities/bear.rb: removed useless superclass; removed use 
  of SophisticatedSpriteState
- level Arctic Tutorial (ATUT): fixed some constant references
- sprinter.rb: favourite colour changed to blue
- sprinter.rb, warior.rb, shielder.rb: init_images public, called as in all
  normal Entities from Entity#initialize