@@ -1,0 +1,25 @@
+<?xml version="1.0"?>
+
+<map>
+  <blocktypes>
+    <blocktype code="0" path="themes/TestsTheme/test_free_tile.tga" />
+    <blocktype code="1" path="themes/TestsTheme/test_base_tile.tga" solid="solid" />
+  </blocktypes>
+
+  <blocks>
+1111111111111111
+1000000000000001
+1000000000000001
+1000000000000001
+1000000000000001
+1000000000000001
+1000000111111111
+1000000000000001
+1000000000000001
+1000000000000001
+1110011111110011
+1110011111110011
+1111111111111111
+</blocks>
+
+</map>
