@@ -33,5 +33,6 @@
     <level>FlyingTroll</level>
     <level>LockKeys</level>
     <level>FireballSpitter</level>
+    <level>BigBrick</level>
   </suite>
 </levelsuite>
